--- a/package.json
+++ b/package.json
@@ -9,9 +9,10 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "firebase": "^9.0.2",
+    "history": "^5.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-router-dom": "^5.3.0",
+    "react-router-dom": "^6.0.0-beta.3",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.2"
   },
