Changed Firebase deploy options
* Changed Firebase deploy project
* Updated CI/CD GitHub auto deploy
* Change Project reference Config file

--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -15,6 +15,6 @@ jobs:
       - uses: FirebaseExtended/action-hosting-deploy@v0
         with:
           repoToken: '${{ secrets.GITHUB_TOKEN }}'
-          firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_SLACK_CLONE_9 }}'
+          firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_CLONE_PROJECTS_9 }}'
           channelId: live
-          projectId: slack-clone-9
+          projectId: clone-projects-9
